test/files/neg/t10270.check
Main_2.scala:5: warning: Unused import
    import Implicits._
                     ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
